add troubleshooting section + put back the ActiveByDefault property

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
 	<profiles>
 		<profile>
 			<id>local</id>
+			<activation>
+			   <activeByDefault>true</activeByDefault>
+		    </activation>
 			<properties>
 				<overrides.props.file>local.overrides.properties</overrides.props.file>
 				<current.profile>local</current.profile>
