--- a/pom.xml
+++ b/pom.xml
@@ -4,22 +4,24 @@
 
 	<groupId>com.wedevol</groupId>
 	<artifactId>mvnspringboot</artifactId>
-	<version>1.0.3</version>
+	<version>2.0.0</version>
 	<packaging>war</packaging>
 	<name>Spring Boot Project with Maven</name>
 	<description>This is a spring boot rest project that handle the application properties per environment using Maven profiles.</description>
 
 	<properties>
-		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<tomcat.version>8.5.30</tomcat.version> <!-- activates spring boot internal servlet configuration when used as auto executable -->
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.3.RELEASE</version>
+		<version>2.1.0.RELEASE</version>
 		<!-- https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.0-Release-Notes -->
+		<!-- https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1.0-M1-Release-Notes -->
 	</parent>
 
 	<dependencies>
@@ -31,7 +33,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+			<scope>provided</scope> <!-- provided by custom Tomcat -->
 		</dependency>
 	</dependencies>
 	
